--- a/apps/front/package.json
+++ b/apps/front/package.json
@@ -26,6 +26,7 @@
     "axios": "^1.7.4",
     "bits-ui": "1.0.0-next.77",
     "clsx": "^2.1.1",
+    "embla-carousel-autoplay": "^8.6.0",
     "embla-carousel-svelte": "^8.3.0",
     "eslint": "^9.0.0",
     "eslint-config-prettier": "^9.1.0",
