--- a/apps/front/package.json
+++ b/apps/front/package.json
@@ -20,6 +20,7 @@
     "@sveltejs/kit": "^2.0.0",
     "@sveltejs/vite-plugin-svelte": "^4.0.0-next.6",
     "@tailwindcss/typography": "^0.5.14",
+    "@tanstack/table-core": "^8.21.2",
     "@types/eslint": "^9.6.0",
     "@vinejs/vine": "^2.1.0",
     "autoprefixer": "^10.4.20",
