--- a/apps/front/package.json
+++ b/apps/front/package.json
@@ -16,6 +16,7 @@
     "hevel-ui": "1.0.0-next.13"
   },
   "devDependencies": {
+    "@internationalized/date": "^3.8.0",
     "@sveltejs/adapter-static": "^3.0.4",
     "@sveltejs/kit": "^2.0.0",
     "@sveltejs/vite-plugin-svelte": "^4.0.0-next.6",
